examples/fail/semantic/invalid_cast.bina
// EXPECT_SEMANTIC_ERROR: invalid cast from string to int32
fn main() -> int {
    let x = cast<int32>("42");
    return x;
}
